--- a/0.1.0/manual/sysops.html
+++ b/0.1.0/manual/sysops.html
@@ -256,7 +256,7 @@ subject to magic-set rewrites, you can decipher the result.</p>
 
 <dl class="py function">
 <dt class="sig sig-object py">
-<span class="sig-name descname"><span class="pre">::access_level</span> <span class="pre">&lt;REL_NAME&gt;</span> <span class="pre">&lt;ACCESS_LEVEL&gt;</span></span></dt>
+<span class="sig-name descname"><span class="pre">::access_level</span> <span class="pre">&lt;ACCESS_LEVEL&gt;</span> <span class="pre">&lt;REL_NAME&gt;</span> <span class="pre">(,</span> <span class="pre">&lt;REL_NAME&gt;)*</span></span></dt>
 <dd><p>Sets the access level of <code class="docutils literal notranslate"><span class="pre">&lt;REL_NAME&gt;</span></code> to the given level. The levels are:</p>
 <ul class="simple">
 <li><p><code class="docutils literal notranslate"><span class="pre">normal</span></code> allows everything,</p></li>
