new landing page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url='https://github.com/cozodb/cozo'" />
+    <meta charset="UTF-8"/>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>CozoDB: embedded Datalog, performant graphs</title>
+    <meta name="description"
+          content="A general-purpose, transactional, relational database that uses Datalog and focuses on graph data and algorithms, with time-travelling capability">
+  <script type="module" crossorigin src="/assets/index.f0071cdd.js"></script>
+  <link rel="stylesheet" href="/assets/index.de34fbbf.css">
 </head>
+<body class="font-inter antialiased bg-white text-gray-900 tracking-tight">
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<script>
+    if (localStorage.getItem('sidebar-expanded') == 'true') {
+        document.querySelector('body').classList.add('sidebar-expanded');
+    } else {
+        document.querySelector('body').classList.remove('sidebar-expanded');
+    }
+</script>
+<div id="root"></div>
 
-<body>
 </body>
-
 </html>
