--- a/0.4.0/manual/genindex.html
+++ b/0.4.0/manual/genindex.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head><meta charset="utf-8"/>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://docs.cozodb.org/en/latest/genindex.html'" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="color-scheme" content="light dark">
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-5QG29TGPBJ"></script>
